@@ -2076,3 +2076,43 @@ int Hunspell_remove(Hunhandle *pHunspell, const char * word) {
 void Hunspell_free_list(Hunhandle *, char *** slst, int n) {
         freelist(slst, n);
 }
+
+int Hunspell::suffix_suggest(char*** slst, const char * root_word){
+  struct hentry * he = NULL;
+  int len;
+  char w2[MAXWORDUTF8LEN];
+  const char * word;
+  char * ignoredchars = pAMgr->get_ignore();
+  if (ignoredchars != NULL) {
+    strcpy(w2, root_word);
+    if (utf8) {
+      int ignoredchars_utf16_len;
+      unsigned short * ignoredchars_utf16 = pAMgr->get_ignore_utf16(&ignoredchars_utf16_len);
+      remove_ignored_chars_utf(w2, ignoredchars_utf16, ignoredchars_utf16_len);
+    } else {
+      remove_ignored_chars(w2,ignoredchars);
+    }
+    word = w2;
+  } else word = root_word;
+  
+  len = strlen(word);
+
+  if (!len)
+    return 0;
+  
+  char ** wlst;
+  wlst = (char **) malloc(MAXSUGGESTION * sizeof(char *));
+  if (wlst == NULL) return -1;
+  *slst = wlst;
+  for (int i = 0; i < MAXSUGGESTION; i++) {
+    wlst[i] = NULL;
+  }
+
+  for (int i = 0; (i < maxdic) && !he; i++) {
+    he = (pHMgr[i])->lookup(word);
+  }
+  if (he){
+    return pAMgr->get_suffix_words(he->astr,he->alen,root_word,*slst);
+  }
+  return 0;
+}
