@@ -1,3 +1,8 @@
+2014-10-17 Caolán McNamara <caolanm at LibO>:
+	* sf#245 Feature from Anish Patil -S mode
+	  to show suggestions for completion of
+	  correctly spelled words
+
 2014-10-16 Caolán McNamara <caolanm at LibO>:
 	* rhbz#915448, sf#57, sf#185 report character offset
 	  and not byte offset in ispell mode
